--- a/index.html
+++ b/index.html
@@ -20,17 +20,28 @@
   </p>
 
   <p>
-      HTML was created by the original "web developer", computer scientist
-      <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
-      Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
-      share pictures of his cat, but it would be cool if it were.
+    <a href="http://twitter.com/learnenough" target="_blank" style="text-decoration: 
+    none;"> 
+    <img src="images/small_twitter_logo.png">
+  </a>
+  You should follow Learn Enough on Twitter <a href="http://twitter.com/learnenough" 
+  target="_blank">here</a>.
   </p>
 
-  <img src="images/kitten.jpg" alt="An adorable kitten">
+  <p>
+  HTML was created by the original "web developer", computer scientist
+  <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
+    Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
+    share pictures of his cat, but it would be cool if it were.
+  </p>
+
+  <a href="http://cdn.learnenough.com/kitten.jpg">
+    <img src="images/kitten.jpg" alt="An adorable kitten">
+  </a>
 
   <h2>Background</h2>
 
-  <p>
+    <p>
     Learn Enough to Be Dangerous is an outgrowth of the
     <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the
     <a href="http://www.softcover.io/">Softcover publishing platform</a>.
@@ -55,7 +66,7 @@
     <h3> Michael Hartl </h3>
 
     <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
-     alt="Michael Hartl">
+    alt="Michael Hartl">
 
     <p>
       Michael is the creator of the <a href="http://railstutorial.org/">
@@ -76,7 +87,7 @@
     <h3>Lee Donahoe</h3>
 
     <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
-     alt="Lee Donahoe">
+    alt="Lee Donahoe">
 
     <p>
       When he's not literally swimming with sharks or hunting powder stashes
@@ -94,7 +105,7 @@
     <h3>Nick Merwin</h3>
 
     <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
-     alt="Nick Merwin">
+    alt="Nick Merwin">
 
     <p>
       You may have seen him shredding guitar live with Capital Cities on Jimmy
@@ -107,5 +118,5 @@
       You should follow Nick on Twitter
       <a href="https://twitter.com/nickmerwin" target="_blank">here</a>.
     </p>
-</body>
-</html>
+  </body>
+  </html>
