--- a/moby_dick.html
+++ b/moby_dick.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 
-    <header>
+  <div style="text-align: right">
+    <a href="index.html" style="text-decoration: none; color: #0000EE">Home</a>
+    <a href="tags.html" style="margin-left: 10px; text-decoration: none; color:
+     #0000EE">HTML Tags</a>
+    <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; 
+    color: #0000EE">Moby Dick</a>
+  </div>
+
+    <header style="text-align: center; margin: 0 0 80px">
       <h1> A Softcover Book Report </h1>
       <h2>Moby-Dick (or, The Whale)</h2>
     </header>
@@ -26,16 +34,19 @@
     </div>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/sperm_whales.jpg" alt="Sperm Whale">
+      <img src="images/sperm_whales.jpg" alt="Sperm Whale" style="display: block; 
+      margin: 0 auto;">
     </a>
 
-    <div>
+    <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: 
+    #fafafa">
 
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank">
-        <img src="images/moby_dick.png" alt="Moby Dick">
+        <img src="images/moby_dick.png" alt="Moby Dick" height="165px" style="float: 
+        left; margin-right: 40px">
       </a>
 
       <p>
@@ -45,9 +56,9 @@
           by Herman Melville begins with these immortal words:
       </p>
 
-      <blockquote>
+      <blockquote style="font-style: italic; font-size: 20px;">
         <p>
-          <span>Call me Ishmael.</span> Some years ago–never mind how long
+          <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #ff0000;">Call me Ishmael.</span> Some years ago–never mind how long
           precisely–having little or no money in my purse, and nothing
           particular to interest me on shore, I thought I would sail about a
           little and see the watery part of the world. It is a way I have of
@@ -61,31 +72,27 @@
         jillion pages. The only thing bigger than Moby Dick (who—<em>spoiler
         alert!</em>—is a giant white whale) is the book itself.
       </p>
+
+      <h4>My top 3 favorite things about Moby Dick</h4>
+
+        <ol>
+          <li>Vengeful whale</li>
+          <li>Salty sailors</li>
+          <li>The names "Queenqueg" and "Starbuck"</li>
+        </ol>
+
+      <h4> Other things about Moby Dick </h4>
+
+      <ul>
+        <li>
+          Chapter after chapter (after chapter) of meticulous detail about whaling
+        </li>
+        <li> The story pretty much <a href="https://en.wikipedia.org/wiki/Essex_(whaleship)" 
+        target="_blank">happened in real life</a>
+        </li>
+        <li>Mad sea captains are fun</li>
+      </ul>
     </div>
-
-    <h4>My top 3 favorite things about Moby Dick</h4>
-
-    <div>
-      <ol>
-        <li>Vengeful whale</li>
-        <li>Salty sailors</li>
-        <li>The names "Queenqueg" and "Starbuck"</li>
-      </ol>
-    </div>
-
-    <h4> Other things about Moby Dick </h4>
-
-    <ul>
-      <li>
-        Chapter after chapter (after chapter) of meticulous detail about whaling
-      </li>
-      <li> The story pretty much <a href="https://en.wikipedia.org/wiki/Essex_(whaleship)" 
-      target="_blank">happened in real life</a>
-      </li>
-      <li>Mad sea captains are fun</li>
-    </ul>
-
-
 
 </body>
 </html>
