--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,12 @@
   </head>
   <body>
 
-  <div>
-    <a href="index.html">Home</a>
-    <a href="moby_dick.html">Moby Dick</a>
-    <a href="tags.html">HTML Tags</a>
+  <div style="text-align: right">
+    <a href="index.html" style="text-decoration: none; color: #0000EE">Home</a>
+    <a href="tags.html" style="margin-left: 10px; text-decoration: none; color:
+     #0000EE">HTML Tags</a>
+    <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; 
+    color: #0000EE">Moby Dick</a>
   </div>
 
     <header>
@@ -45,9 +47,33 @@
           <th> Purpose </th>
         </tr>
         <tr>
-          <td><code>h1</code>&ndash;<code>h6</code></td>
-          <td>headings</td>
-          <td>include a heading (levels 1&ndash;6)</td>
+          <td style="padding: 10px"><code>h1</code>&ndash;<code>h6</code></td>
+          <td style="padding: 10px">headings</td>
+          <td style="padding: 10px">include a heading (levels 1&ndash;6)</td>
+        </tr>
+        <tr>
+          <td><code>ol</code></td>
+          <td style="padding: 10px">ordered lists</td>
+          <td style="padding: 10px">creates a numbered list</td>
+          <td style="padding: 10px"><code>&lt;ol&gt;&lt;li&gt;one&lt;/ol&gt;</code>
+          <td style="padding: 10px"> <ol><li>one</li></ol></td>
+          </td>
+        </tr>
+        <tr>
+          <td><code>li</code></td>
+          <td>list item</td>
+          <td>creates a list item</td>
+          <td><code>&lt;ol&gt;&lt;li&gt;one&lt;/ol&gt;</code>
+          <td> <ol><li>one</li></ol></td>
+          </td>
+        </tr>
+        <tr>
+          <td><code>ul</code></td>
+          <td>unordered list</td>
+          <td>creates an unordered list</td>
+          <td><code>&lt;ul&gt;&lt;li&gt;item&lt;/ol&gt;</code>
+          <td> <ul><li>one</li></ul></td>
+          </td>
         </tr>
         <tr>
           <td><code>p</code></td>
@@ -87,30 +113,6 @@
         <th>Purpose</th>
         <th>Example</th>
         <th>Result</th>
-      </tr>
-      <tr>
-        <td><code>ol</code></td>
-        <td>ordered lists</td>
-        <td>creates a numbered list</td>
-        <td><code>&lt;ol&gt;&lt;li&gt;one&lt;/ol&gt;</code>
-        <td> <ol><li>one</li></ol></td>
-        </td>
-      </tr>
-      <tr>
-        <td><code>li</code></td>
-        <td>list item</td>
-        <td>creates a list item</td>
-        <td><code>&lt;ol&gt;&lt;li&gt;one&lt;/ol&gt;</code>
-        <td> <ol><li>one</li></ol></td>
-        </td>
-      </tr>
-      <tr>
-        <td><code>ul</code></td>
-        <td>unordered list</td>
-        <td>creates an unordered list</td>
-        <td><code>&lt;ul&gt;&lt;li&gt;item&lt;/ol&gt;</code>
-        <td> <ul><li>one</li></ul></td>
-        </td>
       </tr>
       <tr>
         <td><code>em</code></td>
